# DECLuTTER-AI

./: .gitignore  ADHD_Vision_Organizer_MVP_Docs_v0.1.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  DECLUTTER_AI_2026_LAUNCH_PLAN_WITH_PORTER_VALUE_CHAIN.md  IMPLEMENTATION_PLAN_2026.md  INDIGENOUS_AFRICAN_LANGUAGES.md  MutualCircle Launcher.command  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROJECT_STATUS.md  README.md  README_LAUNCH.md  REMAINING_ISSUES_PRIORITIZED.md  SETUP.md  docker-compose.yml  index.html  inventory.md  launch.applescript  launch.sh  llms-full.txt  llms.txt  sell  tracking.md
server/: .env.example  README.md  pyproject.toml
server/app/: main.py
server/app/core/: settings.py
server/app/data/: price_seed.json
server/app/middleware/: rate_limit.py  request_logging.py  request_size.py
server/app/models/: trade.py
server/app/schemas/: analysis.py  common.py  listing.py  public_listing.py  session.py  valuation.py
server/app/security/: __init__.py  dependencies.py  firebase.py
server/app/services/: analysis_adapter.py  image_intake.py  listing_service.py  llm_price_estimator.py  marketplace_ebay_service.py  session_store.py  (+7 more)
server/scripts/: smoke_backend.py
server/tests/: test_analysis_adapter_factory.py  test_app.py  test_security.py  test_storage_adapter.py  test_trade_api.py  test_trade_credits.py  test_trade_listings.py  test_trade_matcher.py  test_trade_nd_ux.py  test_trade_reputation.py  test_trade_safety.py  test_trade_service.py  test_trade_verified.py
(+351 files in other folders)
